# book_worm

./: .gitignore  README.md  pyproject.toml
book_worm/: bot.py  config.py  messages.py
book_worm/handlers/: __init__.py  book.py  category.py  help.py  keyboard.py  message.py  response.py  start.py
book_worm/models/: __init__.py  book.py  category.py  db.py  user.py
book_worm/services/: __init__.py  book.py  category.py  user.py
